--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -147,7 +147,6 @@ footer {
 */
 .page-lead {
     display: block;
-    font-size: $h5-font-size;
     font-weight: 400;
     margin-bottom: 1rem;
     max-width: $max-lead-with;
